# mediapush

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  main.py
app/core/: __init__.py  config.py  container.py  defaults.py  logging.py  monitor.py  proxy.py  retry.py
app/db/: __init__.py  base.py  models.py  repository.py
app/pan115/: __init__.py  client.py  service.py
app/parser/: __init__.py  filename.py
app/pipeline/: __init__.py  context.py  pipeline.py
app/scheduler/: __init__.py  scheduler.py  watchdog.py
app/telegram/: __init__.py  bot.py  handlers.py  pusher.py
app/tmdb/: __init__.py  cache.py  client.py  service.py
app/web/: __init__.py  app.py  auth.py  templates.py
app/web/routes/: __init__.py  auth.py  config.py  dashboard.py  logs.py  shares.py  tasks.py  tmdb_cache.py
app/web/static/: style.css
app/web/templates/: base.html  config.html  dashboard.html  login.html  logs.html  shares.html  tasks.html  tmdb_cache.html
deploy/: install.sh  mediapush.service
docs/: ARCHITECTURE.md
tests/: test_container.py  test_handlers.py  test_monitor.py  test_pan115.py  test_parser.py  test_pipeline.py  test_pusher.py  test_repository.py  test_retry.py  test_scheduler.py  test_telegram.py  test_tmdb.py  test_watchdog.py  test_web.py
