[project]
name = "mediapush"
version = "0.1.0"
description = "115 网盘分享 → TMDB 元数据 → Telegram 频道推送，带 Web 管理后台"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "python-telegram-bot>=20.8",
    "apscheduler>=3.10",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "p115client>=0.0.9.4.7",
    "httpx>=0.27",
    "pydantic-settings>=2.2",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
